# competitive-programming

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-tidy-weird_algorithm.txt
cmake/: ClangTidy.cmake  CompilerOptions.cmake  Sanitizers.cmake  Testing.cmake  Warnings.cmake  run_perf_smoke.cmake  run_semantic_test.cmake  run_test.cmake  validate_raab_game_i.cmake  validate_sum_of_two_values.cmake
docs/: architecture.md  cses-cpp-philosophy.md  cses-problems.md
scripts/: check_format.sh  dev_check.sh  macos-setup-clang-tidy.sh  (+3 more)
src/cses/: CMakeLists.txt
src/cses/apartments/: apartments.cpp  clang-tidy.txt  main.cpp  notes.md
src/cses/apple_division/: apple_division.cpp  clang-tidy.txt  main.cpp  notes.md
src/cses/bit_strings/: bit_strings.cpp  clang-tidy.txt  main.cpp  notes.md
src/cses/chessboard_and_queens/: chessboard_and_queens.cpp  clang-tidy.txt  main.cpp  notes.md
src/cses/coin_piles/: clang-tidy.txt  coin_piles.cpp  main.cpp  notes.md
src/cses/collecting_numbers/: collecting_numbers.cpp  collecting_numbers_gtest.cpp
src/cses/collecting_numbers_ii/: collecting_numbers_ii.cpp  collecting_numbers_ii_gtest.cpp
src/cses/creating_strings/: clang-tidy.txt  creating_strings.cpp  main.cpp  notes.md
src/cses/digit_queries/: clang-tidy.txt  digit_queries.cpp  main.cpp
src/cses/distinct_numbers/: clang-tidy.txt  distinct_numbers.cpp  main.cpp  notes.md
src/cses/ferris_wheel/: clang-tidy.txt  ferris_wheel.cpp  notes.md
src/cses/gray_code_bit/: clang-tidy.txt  gray_code_bit.cpp  main.cpp  notes.md
src/cses/grid_coloring_i/: clang-tidy.txt  grid_coloring_i.cpp  main.cpp
src/cses/grid_path_description/: clang-tidy.txt  grid_path_description.cpp  main.cpp  notes.md
src/cses/increasing_array/: clang-tidy.txt  increasing_array.cpp  main.cpp  notes.md  test.config.cmake
src/cses/introductory/: CMakeLists.txt
src/cses/introductory/bit_strings/: main.cpp
src/cses/introductory/number_spiral/: main.cpp
src/cses/introductory/permutations/: main.cpp
src/cses/introductory/repetitions/: main.cpp
src/cses/introductory/two_knights/: main.cpp
src/cses/introductory/weird_algorithm/: main.cpp
src/cses/knight_moves_grid/: clang-tidy.txt  knight_moves_grid.cpp  main.cpp  notes.md
src/cses/maximum_subarray_sum/: maximum_subarray_sum.cpp  notes.md  test.config.cmake
src/cses/mex_grid_construction/: clang-tidy.txt  main.cpp  mex_grid_construction.cpp  notes.md
src/cses/missing_coin_sum/: missing_coin_sum.cpp
src/cses/missing_number/: clang-tidy.txt  main.cpp  missing_number.cpp  notes.md
src/cses/movie_festival/: clang-tidy.txt  main.cpp  movie_festival.cpp  notes.md
src/cses/number_spiral/: clang-tidy.txt  main.cpp  notes.md  number_spiral.cpp  test.config.cmake
src/cses/palindrome_reorder/: clang-tidy.txt  main.cpp  notes.md  palindrome_reorder.cpp
src/cses/permutations/: CMakeLists.txt  clang-tidy.txt  main.cpp  notes.md  permutations.cpp
src/cses/raab_game_i/: clang-tidy.txt  main.cpp  notes.md  raab_game_i.cpp  test.config.cmake  test_output.txt
src/cses/repetitions/: clang-tidy.txt  main.cpp  notes.md  repetitions.cpp
src/cses/restaurant_customers/: clang-tidy.txt  notes.md  restaurant_customers.cpp  test_input.txt
src/cses/stick_lengths/: notes.md  stick_lengths.cpp
src/cses/string_reorder/: clang-tidy.txt  main.cpp  string_reorder.cpp
src/cses/sum_of_two_values/: clang-tidy.txt  notes.md  sum_of_two_values.cpp  test.config.cmake
src/cses/tests/apartments/: apartments_gtest.cpp
src/cses/tests/apple_division/: apple_division_gtest.cpp
src/cses/tests/bit_strings/: bit_strings_gtest.cpp
src/cses/tests/chessboard_and_queens/: chessboard_and_queens_gtest.cpp
src/cses/tests/coin_piles/: coin_piles_gtest.cpp
src/cses/tests/collecting_numbers/: collecting_numbers_gtest.cpp
src/cses/tests/collecting_numbers_ii/: collecting_numbers_ii_gtest.cpp
src/cses/tests/creating_strings/: creating_strings_gtest.cpp
src/cses/tests/digit_queries/: digit_queries_gtest.cpp
src/cses/tests/distinct_numbers/: distinct_numbers_gtest.cpp
src/cses/tests/ferris_wheel/: ferris_wheel_gtest.cpp
src/cses/tests/gray_code_bit/: gray_code_bit_gtest.cpp
src/cses/tests/grid_coloring_i/: grid_coloring_i_gtest.cpp
src/cses/tests/grid_coloring_i/gtest_cases/: case_00_output.txt
src/cses/tests/grid_path_description/: grid_path_description_gtest.cpp
src/cses/tests/increasing_array/: increasing_array_gtest.cpp
src/cses/tests/knight_moves_grid/: knight_moves_grid_gtest.cpp
src/cses/tests/maximum_subarray_sum/: maximum_subarray_sum_gtest.cpp
src/cses/tests/mex_grid_construction/: mex_grid_construction_gtest.cpp
src/cses/tests/missing_coin_sum/: missing_coin_sum_gtest.cpp
src/cses/tests/missing_number/: missing_number_gtest.cpp
src/cses/tests/movie_festival/: movie_festival_gtest.cpp
src/cses/tests/number_spiral/: number_spiral_gtest.cpp
src/cses/tests/palindrome_reorder/: palindrome_reorder_gtest.cpp
src/cses/tests/permutations/: permutations_gtest.cpp
src/cses/tests/raab_game_i/: raab_game_i_gtest.cpp
src/cses/tests/repetitions/: repetitions_gtest.cpp
src/cses/tests/restaurant_customers/: restaurant_customers_gtest.cpp
src/cses/tests/stick_lengths/: stick_lengths_gtest.cpp
src/cses/tests/string_reorder/: string_reorder_gtest.cpp
src/cses/tests/sum_of_two_values/: sum_of_two_values_gtest.cpp
src/cses/tests/tower_of_hanoi/: tower_of_hanoi_gtest.cpp
src/cses/tests/trailing_zeros/: trailing_zeros_gtest.cpp
src/cses/tests/two_knights/: two_knights_gtest.cpp
src/cses/tests/two_sets/: two_sets_gtest.cpp
src/cses/tests/weird_algorithm/: weird_algorithm_gtest.cpp
src/cses/tower_of_hanoi/: clang-tidy.txt  main.cpp  notes.md  tower_of_hanoi.cpp
src/cses/trailing_zeros/: clang-tidy.txt  main.cpp  notes.md  trailing_zeros.cpp
src/cses/two_knights/: CMakeLists.txt  clang-tidy.txt  main.cpp  notes.md  two_knights.cpp
src/cses/two_sets/: clang-tidy.txt  main.cpp  notes.md  two_sets.cpp
src/cses/weird_algorithm/: clang-tidy.txt  main.cpp  notes.md  weird_algorithm.cpp
(+54 files in other folders)
